Fixed an issue with the menu badges on smaller screens; price was moving to the next line but needs to stay aligned with the item title. Also fixed a minor issue with the menu-badge margins by adding a space to the innerHTML of the item title. Removed XS media query.

--- a/css/menu.css
+++ b/css/menu.css
@@ -49,25 +49,31 @@
   border-radius: 0;
 }
 
+.card-title {
+  position: relative;
+  display: block;
+  padding-right: 50px;
+}
+
+.menu-price {
+  position: absolute;
+  display: inline-block; /* Ensure price stays in line with item title */
+  right: 0;
+  top: 0;
+  white-space: nowrap;
+}
+
 .diet-badge {
+  display: inline-block;
   color: grey;
   letter-spacing: 1px;
   padding-left: 5px;
   padding-right: 5px;
+  margin-right: 5px;
 }
 
-.menu-price {
+.item-badge {
   display: inline-block;
-  vertical-align: middle;
-  line-height: normal;
-  margin: 0 auto;
-}
-
-/* XS screens (>375px) */
-@media (min-width: 375px) {
-  .menu-link {
-    font-size: 16px;
-  }
 }
 
 /* Small screens (>576px) */
